--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -14,12 +14,9 @@
         </div>
         <img src="/static/images/cs.png"/>
         <div class="alert alert-primary" role="alert">
-            MyCode --- MyName
+            201710481 --- Macarena Oyague
         </div>
-        <div><a href="/books">Books I have read</a></div>
-        <br/>
-        <div><a href="/create_test_books">Create test books</a></div>
-
+        <div><a href="/static/crud_users.html">Manage Users</a></div>
     </div>
 </body>
 </html>
