--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -17,6 +17,8 @@
             201710481 --- Macarena Oyague
         </div>
         <div><a href="/static/crud_users.html">Manage Users</a></div>
+        <div><a href="/static/crud_messages.html">View Messages</a></div>
+        <div><a href="/static/login.html">Login</a></div>
     </div>
 </body>
 </html>
