Project almost complete

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -2,23 +2,31 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Chat</title>
+    <title>Global Chat Web</title>
     <link rel="stylesheet" href="/static/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/static/css/login.css/">
     <script src="/static/js/libs/bootstrap.min.js" ></script>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 
 </head>
 <body>
-    <div align="center" width="80%">
-        <div class="alert alert-primary" role="alert">
-          CS2B01 - Platform-Based Development
+    <div>
+        <img src="/static/images/cs.png" width="100%"/>
+        <div  style="border:1px solid black">
+            <h2>Global Chat Web</h2>
+            <img src="/static/images/icon.png" height="30%" width="30%"/>
+            <br>
+            <div><a href="/static/login.html">Log in</a></div>
+        <div><a href="/static/register.html">Sign up</a></div>
         </div>
-        <img src="/static/images/cs.png"/>
-        <div class="alert alert-primary" role="alert">
-            201710481 --- Macarena Oyague
+        <br>
+
+        <div>
+            CS2B01 - Platform-Based Development
         </div>
-        <div><a href="/static/crud_users.html">Manage Users</a></div>
-        <div><a href="/static/crud_messages.html">View Messages</a></div>
-        <div><a href="/static/login.html">Login</a></div>
+        <div >
+            201710481 - Macarena Oyague
+        </div>
     </div>
 </body>
 </html>
