Final chat project

--- a/web/templates/chat.html
+++ b/web/templates/chat.html
@@ -26,7 +26,7 @@
         <tr>
             <td width="25%">
                 <div>
-                    <label class="alert alert-dark" role="alert" id="cu_name" onclick="changeNameLoad()" ></label>
+                    <label class="alert alert-warning" role="alert" id="cu_name" onclick="changeNameLoad()" ></label>
                     <input id="inputChange" type="text" placeholder="Change name..." style="display:none">
                     <button id="buttonChange" onclick="changeName()" type="button" class="btn btn-outline-dark btn-sm" style="display:none">Change</button>
                     <button id="cancelChange" onclick="cancelChange()" type="button" class="btn btn-outline-primary btn-sm" style="display:none">Cancel</button>
